--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -14,7 +14,7 @@
   font-size: 12px;
   line-height: 1.7;
   padding-top: 10px;
-  font-family: OpenSans;
+  font-family: var(--open-sans);
 }
 
 .wrapperInfo {
@@ -26,7 +26,7 @@
 .redirectText {
   color: #52627a;
   font-size: 14px;
-  font-family: OpenSans;
+  font-family: var(--open-sans);
   text-decoration: none;
   font-weight: bold;
   margin-bottom: 20px;
