--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -5,24 +5,19 @@
 }
 
 .wrapper {
-  background-color: white;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
   border-bottom: 1px solid #dddddd;
-  padding: 0px 70px;
+  padding: 8px 16px;
 }
 
 .wrapperSubMain {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  box-shadow: 0 4px 2px -2px #dadadd;
-  padding: 0px 70px;
+  display: none;
 }
 
-.main {
+.barMobile {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,21 +27,23 @@
   position: relative;
 }
 
+.barDesktop {
+  display: none;
+}
+
+.bar {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
-  width: 120px;
+  width: 80px;
   height: auto;
+  margin-left: 20px;
 }
 
 .wrapperInput {
-  width: 50%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  border: 0.5px solid #52627a;
-  border-radius: 15px;
-  background-color: #ffffff;
-  padding: 10px 20px;
+  display: none;
 }
 
 .input {
@@ -93,6 +90,7 @@
   height: 60px;
   display: flex;
   align-items: center;
+  margin: 0px 10px;
 }
 
 .navBar:hover {
@@ -103,6 +101,7 @@
   font-size: 12px;
   font-family: var(--kanyon);
   padding: 10px;
+  font-weight: 700;
   text-decoration: none;
   color: #000000;
 }
@@ -186,21 +185,14 @@
 }
 
 .initialAuthMain {
-  background-color: #002373;
-  outline: none;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  width: 200px;
-  height: 40px;
+  display: none;
 }
 
 .initialText {
   font-size: 14px;
   font-family: var(--kanyon);
   color: #ffffff;
+  padding-left: 5px;
 }
 
 .initialAuth {
@@ -286,4 +278,61 @@
 .list:hover {
   background-color: cornflowerblue;
   border-radius: 3px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .wrapper {
+    padding: 3px 70px;
+  }
+
+  .barMobile {
+    display: none;
+  }
+
+  .barDesktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1300px;
+    margin: auto;
+    position: relative;
+  }
+
+  .wrapperSubMain {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    box-shadow: 0 4px 2px -2px #dadadd;
+    padding: 0px 70px;
+  }
+
+  .logo {
+    width: 120px;
+  }
+
+  .wrapperInput {
+    width: 50%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 0.5px solid #52627a;
+    border-radius: 15px;
+    background-color: #ffffff;
+    padding: 10px 20px;
+  }
+
+  .initialAuthMain {
+    background-color: #002373;
+    outline: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    width: 200px;
+    height: 40px;
+  }
 }
