--- a/styles/HowToUse.module.css
+++ b/styles/HowToUse.module.css
@@ -16,9 +16,10 @@
   position: absolute;
   transform: rotate(-90deg);
   left: -30px;
-  bottom: -80px;
+  top: 80%;
   opacity: 0.3;
   z-index: 1;
+  clip-path: inset(55px 0px 0px 0px round 11px);
 }
 
 .vectorRedRounded {
@@ -31,6 +32,7 @@
   transform: rotate(-90deg);
   opacity: 0.8;
   z-index: 1;
+  clip-path: inset(0px 7px 32px 0px round 10px);
 }
 
 .foreGroundLayer {
@@ -98,9 +100,10 @@
     position: absolute;
     transform: rotate(-90deg);
     left: -30px;
-    bottom: -80px;
+    top: 50%;
     opacity: 0.3;
     z-index: 1;
+    clip-path: inset(55px 0px 0px 22px round 10px);
   }
 
   .vectorRedRounded {
@@ -113,6 +116,7 @@
     transform: rotate(-90deg);
     opacity: 0.8;
     z-index: 1;
+    clip-path: inset(0px 7px 32px 0px round 10px);
   }
 
   .foreGroundLayer {
