--- a/styles/Recommendation.module.css
+++ b/styles/Recommendation.module.css
@@ -46,6 +46,10 @@
   display: none;
 }
 
+.wrapperDesktop {
+  display: none;
+}
+
 .shadowSlider {
   width: 140px;
   height: 210px;
@@ -72,6 +76,7 @@
     margin-top: 110px;
     margin-left: -40px;
   }
+
   .navigationNextButton {
     display: block;
     position: absolute;
@@ -80,5 +85,13 @@
     right: 0;
     margin-top: 110px;
     margin-right: -40px;
+  }
+
+  .wrapperMobile {
+    display: none;
+  }
+
+  .wrapperDesktop {
+    display: block;
   }
 }
