--- a/styles/HowToUse.module.css
+++ b/styles/HowToUse.module.css
@@ -7,19 +7,46 @@
 .backgroundLayer {
   position: absolute;
   width: 100%;
-  height: 215px;
+  height: 100%;
+}
+
+.wrapperVectorBlue {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0%;
+}
+
+.wrapperVectorBlue {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0%;
 }
 
 .vectorBlueRounded {
-  width: 138px;
+  width: 128px;
   height: auto;
   position: absolute;
   transform: rotate(-90deg);
   left: -30px;
-  top: 80%;
+  bottom: -23px;
   opacity: 0.3;
   z-index: 1;
   clip-path: inset(55px 0px 0px 0px round 11px);
+}
+
+.wrapperVectorRed {
+  display: inline-block;
+  height: 90px;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
 }
 
 .vectorRedRounded {
@@ -36,7 +63,7 @@
 }
 
 .foreGroundLayer {
-  padding: 17px 23px;
+  padding: 10px 23px;
   position: relative;
   z-index: 2;
 }
@@ -90,8 +117,15 @@
 @media only screen and (min-width: 1024px) {
   .backgroundLayer {
     position: absolute;
+  }
+
+  .wrapperVectorBlue {
+    display: inline-block;
+    height: 100%;
     width: 100%;
-    height: 215px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
   }
 
   .vectorBlueRounded {
@@ -100,27 +134,26 @@
     position: absolute;
     transform: rotate(-90deg);
     left: -30px;
-    top: 50%;
+    top: 40%;
     opacity: 0.3;
     z-index: 1;
     clip-path: inset(55px 0px 0px 22px round 10px);
   }
 
   .vectorRedRounded {
-    width: 86px;
-    height: auto;
     position: absolute;
+    width: 90px;
+    height: auto;
     transform: rotate(-90deg);
     right: -15px;
     top: -24px;
-    transform: rotate(-90deg);
     opacity: 0.8;
     z-index: 1;
     clip-path: inset(0px 7px 32px 0px round 10px);
   }
 
   .foreGroundLayer {
-    padding: 40px;
+    padding: 32px 40px;
   }
 
   .stepDetail {
