--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,7 @@ body {
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
 }
+
+a {
+  text-decoration: none;
+}
