--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -169,6 +169,10 @@
   display: none;
 }
 
+.wrapperMobile {
+  display: block;
+}
+
 @media only screen and (min-width: 1024px) {
   .container {
     position: relative;
