--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,5 +1,4 @@
 .container {
-  position: fixed;
   z-index: 4;
   width: 100%;
 }
@@ -91,10 +90,84 @@
   display: flex;
   align-items: center;
   margin: 0px 10px;
+  position: relative;
 }
 
 .navBar:hover {
   border-top: 3px solid #05256e;
+}
+
+.navBar:hover .mainDropDown {
+  display: block;
+}
+
+.mainDropDown {
+  display: none;
+  top: 80%;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 230px;
+  border: 0.5px solid #05256e;
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 3;
+}
+
+.listMain {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+  width: 100%;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.listMainText {
+  font-size: 14px;
+  font-family: var(--kanyon);
+}
+.wrapperListMenu {
+  display: flex;
+  width: 90%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.listMain:hover .wrapperListMenu {
+  background-color: #cbe5f4;
+}
+
+.subDropDown {
+  display: none;
+  top: 0;
+  left: 100%;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 230px;
+  border: 0.5px solid #05256e;
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  z-index: 4;
+}
+
+.listMain:hover > .subDropDown {
+  display: block;
+}
+
+.listSubMain {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+  width: 100%;
+  border-radius: 5px;
+}
+.listSubMain:hover {
+  background-color: #cbe5f4;
 }
 
 .headerText {
