--- a/styles/Floating.module.css
+++ b/styles/Floating.module.css
@@ -19,6 +19,7 @@
   height: 220px;
   background-color: white;
   border-radius: 24px;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1024px) {
