--- a/styles/carofTheMonth.module.css
+++ b/styles/carofTheMonth.module.css
@@ -43,6 +43,7 @@
 
 .headerText {
   font-size: 14px;
+  margin: 20px 0px;
   font-family: var(--kanyon-bold);
 }
 
@@ -105,6 +106,10 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .headerText {
+    font-size: 20px;
+  }
+
   .bundle {
     width: 100%;
     display: flex;
