--- a/styles/LoanSection.module.css
+++ b/styles/LoanSection.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background-image: url('../assets/images/bannerLoan.webp');
+  background-image: url('../assets/images/loan/bgLoanMobile.webp');
   background-size: cover;
   margin: 40px 0px;
 }
@@ -82,6 +82,8 @@
 }
 
 .list {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   padding: 8px;
   border: none;
@@ -90,7 +92,7 @@
 }
 
 .list:hover {
-  background-color: cornflowerblue;
+  background-color: #cbe5f4;
   border-radius: 3px;
 }
 
@@ -108,6 +110,7 @@
 
 @media only screen and (min-width: 1024px) {
   .wrapper {
+    background-image: url('../assets/images/loan/bgLoanDesktop.webp');
     background-size: auto;
     background-repeat: no-repeat;
     display: flex;
