--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -63,11 +63,11 @@
 }
 
 .selectorActive {
-  background-color: #246ed4;
+  background-color: #a8d3ed;
   width: 100%;
   height: 40px;
   font-size: 12px;
-  color: #ffffff;
+  color: #404040;
   border: none;
   font-family: var(--open-sans-semi-bold);
 }
@@ -77,8 +77,8 @@
   width: 100%;
   height: 40px;
   font-size: 12px;
-  color: #52627a;
-  border: 0.5px solid #246ed4;
+  color: #404040;
+  border: 0.5px solid #a8d3ed;
   font-family: var(--open-sans-semi-bold);
   margin-right: 10px;
   width: 100%;
@@ -182,6 +182,7 @@
     font-size: 16px;
     line-height: 1.5;
     margin-bottom: 10px;
+    color: #404040;
     text-align: justify;
   }
 
