--- a/styles/LocationList.module.css
+++ b/styles/LocationList.module.css
@@ -21,6 +21,7 @@
   outline: none;
   text-decoration: underline;
   font-size: 10px;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1024px) {
