--- a/styles/OTRPrimary.module.css
+++ b/styles/OTRPrimary.module.css
@@ -46,6 +46,7 @@
   display: flex;
   width: 100%;
   justify-content: flex-end;
+  cursor: pointer;
 }
 
 .mobileHeader {
@@ -117,7 +118,7 @@
 }
 
 .list:hover {
-  background-color: cornflowerblue;
+  background-color: #cbe5f4;
   border-radius: 3px;
 }
 
