--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -16,7 +16,7 @@
   border: 0.5px solid #52627a;
   border-radius: 15px;
   height: 46px;
-  padding: 20px;
+  padding: 0px 20px;
   position: relative;
 }
 
@@ -29,6 +29,7 @@
   font-size: 16px;
   line-height: 24px;
   padding-left: 8px;
+  padding-bottom: 3px;
   outline: none;
   border: none;
 }
@@ -47,17 +48,23 @@
 }
 
 .list {
-  width: 100%;
+  display: flex;
   font-size: 16px;
   padding: 16px;
   border: none;
   text-align: start;
+  cursor: pointer;
+  color: #404040;
   background-color: #ffffff;
 }
 
 .list:hover {
-  background-color: cornflowerblue;
+  background-color: #cbe5f4;
   border-radius: 3px;
+}
+
+.iconChevronLeft {
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1024px) {
