--- a/styles/atoms/Card.module.css
+++ b/styles/atoms/Card.module.css
@@ -3,7 +3,7 @@
   height: 210px;
   background-color: #ffffff;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin: 13px;
   box-shadow: rgb(3 24 56 / 10%) 0px 1px 16px;
 }
 
@@ -30,11 +30,13 @@
 
 .subTitleText {
   font-size: 12px;
+  color: #000000;
 }
 
 .price {
   font-size: 14px;
   margin-top: 5px;
+  color: #000000;
   font-family: var(--open-sans-semi-bold);
 }
 
