--- a/styles/carofTheMonth.module.css
+++ b/styles/carofTheMonth.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin: 40px 0px;
+  margin: 20px 0px;
 }
 
 .categoryMobile {
@@ -47,6 +47,14 @@
   font-family: var(--kanyon-bold);
 }
 
+.bgContent {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(rgba(64, 64, 64, 0) 0%, rgb(64, 64, 64) 100%);
+}
+
 .content {
   background-color: #404040;
   position: relative;
@@ -56,6 +64,7 @@
   width: 100%;
   height: 168px;
   object-fit: cover;
+  transition: opacity 0.5s linear;
 }
 
 .description {
@@ -103,9 +112,14 @@
   font-weight: bold;
   padding: 10px;
   background-color: transparent;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 1024px) {
+  .wrapper {
+    margin: 30px 0px;
+  }
+
   .headerText {
     font-size: 20px;
   }
@@ -126,6 +140,18 @@
     right: 7%;
     bottom: 3%;
     display: block;
+  }
+
+  .bgContent {
+    position: absolute;
+    right: 0%;
+    width: 60px;
+    height: 100%;
+    background: linear-gradient(
+      270deg,
+      rgb(64, 64, 64) 0%,
+      rgba(64, 64, 64, 0) 100%
+    );
   }
 
   .image {
