--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,42 @@ a {
 .swiper-button-disabled {
   display: none;
 }
+
+.swiper-pagination-bullet-active {
+  background-color: #ffffff !important;
+  width: 5px !important;
+  height: 5px !important;
+}
+
+.swiper-pagination-bullet {
+  background-color: #ffffff !important;
+  width: 5px !important;
+  height: 5px !important;
+  opacity: 0.5;
+}
+
+@media only screen and (min-width: 1024px) {
+  .swiper-pagination-bullet-active {
+    width: 8px !important;
+    height: 8px !important;
+  }
+
+  .swiper-pagination-bullet {
+    width: 8px !important;
+    height: 8px !important;
+  }
+}
+
+/* For Firefox */
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+/* Webkit browsers like Safari and Chrome */
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
