trying to fixing minor

--- a/styles/ContactUs.module.css
+++ b/styles/ContactUs.module.css
@@ -113,6 +113,7 @@
 .agreementMobile {
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin-top: 15px;
 }
 
@@ -180,6 +181,7 @@
 
   .agreementDesktop {
     display: flex;
+    align-items: center;
     flex-direction: row;
     margin-top: 25px;
   }
