--- a/styles/LoanSection.module.css
+++ b/styles/LoanSection.module.css
@@ -58,6 +58,7 @@
   background-color: #ffffff;
   font-family: var(--kanyon);
   line-height: 24px;
+  font-size: 14px;
   margin-left: 5px;
   outline: none;
   border: none;
