--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -6,7 +6,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 20px 24px 19px;
   overflow: hidden;
 }
 
@@ -16,14 +15,17 @@
   border: 0.5px solid #52627a;
   border-radius: 15px;
   height: 46px;
+  top: 20px;
+  width: 95%;
+  margin: auto;
   padding: 0px 20px;
+  background-color: #ffffff;
   position: relative;
 }
 
 .input {
   display: flex;
-  width: 100%;
-  border-radius: 15px;
+  width: 95%;
   background-color: #ffffff;
   font-family: var(--kanyon);
   font-size: 16px;
@@ -38,9 +40,9 @@
   max-height: 210px;
   position: absolute;
   border-radius: 10px;
-  top: 8%;
-  left: 2%;
-  right: 2%;
+  top: 80px;
+  left: 20px;
+  right: 20px;
   padding: 5px;
   margin: 10px;
   overflow-x: auto;
