--- a/styles/CarList.module.css
+++ b/styles/CarList.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 20px 0px;
+  margin: 20px 16px;
 }
 
 .header {
@@ -73,7 +73,8 @@
 
 .carListWrapper {
   position: relative;
-  height: 276px;
+  height: auto;
+  width: 100%;
 }
 
 .navigation {
@@ -83,6 +84,19 @@
 .shadowSlider {
   width: 140px;
   height: 210px;
+  display: flex;
+  padding: 0px 0px 10px 10px;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.wrapperLabel {
+  padding-top: 10px;
+}
+
+.labelText {
+  font-size: 10px;
+  color: #404040;
 }
 
 .wrapperDesktop {
@@ -119,6 +133,7 @@
 
   .brandList {
     margin-right: 40px;
+    margin-top: 10px;
     display: block;
   }
 
@@ -138,6 +153,9 @@
     margin: auto;
   }
 
+  .swiperWrap {
+    margin-left: 13px;
+  }
   .swipers {
     padding-left: 30px;
   }
@@ -167,5 +185,10 @@
 
   .wrapperDesktop {
     display: block;
+  }
+
+  .shadowSlider {
+    width: 265px;
+    height: 350px;
   }
 }
