--- a/styles/LoanSection.module.css
+++ b/styles/LoanSection.module.css
@@ -58,10 +58,14 @@
   background-color: #ffffff;
   font-family: var(--kanyon);
   line-height: 24px;
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 5px;
   outline: none;
   border: none;
+}
+
+.input::placeholder {
+  font-size: 12px;
 }
 
 .closeButton {
