--- a/styles/LocationSelector.module.css
+++ b/styles/LocationSelector.module.css
@@ -59,10 +59,9 @@
   max-height: 250px;
   position: absolute;
   border-radius: 10px;
-  top: 15%;
-  left: 2%;
-  right: 2%;
-  padding: 5px;
+  top: 140px;
+  left: 15px;
+  right: 15px;
   margin: 10px;
   overflow-x: auto;
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
@@ -82,4 +81,10 @@
 .buttonCityList:hover {
   background-color: #cbe5f4;
   border-radius: 10px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .wrapper {
+    display: none;
+  }
 }
