--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -68,6 +68,7 @@
   height: 40px;
   font-size: 12px;
   color: #404040;
+  padding: 0px 16px !important;
   border: none;
   font-family: var(--open-sans-semi-bold);
 }
@@ -81,6 +82,7 @@
   border: 0.5px solid #a8d3ed;
   font-family: var(--open-sans-semi-bold);
   margin-right: 10px;
+  padding: 0px 16px !important;
   width: 100%;
 }
 
@@ -125,6 +127,16 @@
 
 .wrapperMainInfoDekstop {
   display: none;
+}
+
+.shadowSlider {
+  width: 150px;
+  height: 40px;
+  display: flex;
+}
+
+.slide {
+  width: auto !important;
 }
 
 @media only screen and (min-width: 1024px) {
