--- a/styles/LocationSelector.module.css
+++ b/styles/LocationSelector.module.css
@@ -83,6 +83,10 @@
   border-radius: 10px;
 }
 
+.buttonClose {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 1024px) {
   .wrapper {
     display: none;
