--- a/styles/carofTheMonth.module.css
+++ b/styles/carofTheMonth.module.css
@@ -6,7 +6,8 @@
   position: absolute;
   left: 7%;
   right: 7%;
-  bottom: 3%;
+  bottom: 0%;
+  border-bottom: 1px solid #ffffff;
 }
 
 .categoryDesktop {
@@ -20,10 +21,8 @@
   color: #ffffff;
   font-size: 14px;
   font-family: var(--kanyon-bold);
-  width: 145px;
+  width: 100%;
   height: 35px;
-  padding-bottom: 5px;
-  background-color: transparent;
   border-bottom: 4px solid #ffffff;
 }
 
@@ -32,13 +31,11 @@
   border: none;
   background-color: transparent;
   color: #ffffff;
+  width: 100%;
   font-size: 14px;
   font-family: var(--kanyon-bold);
-  width: 145px;
   height: 35px;
-  padding-bottom: 5px;
   background-color: transparent;
-  border-bottom: 1px solid #ffffff;
 }
 
 .headerText {
@@ -111,6 +108,22 @@
   padding: 10px;
   background-color: transparent;
   cursor: pointer;
+}
+
+.navigationBackButton {
+  position: absolute;
+  align-items: center;
+  z-index: 5;
+  bottom: 9px;
+  transform: rotate(180deg);
+}
+
+.navigationNextButton {
+  position: absolute;
+  align-items: center;
+  z-index: 5;
+  right: 0;
+  bottom: 6px;
 }
 
 @media only screen and (min-width: 1024px) {
