--- a/styles/CarList.module.css
+++ b/styles/CarList.module.css
@@ -119,7 +119,7 @@
   .wrapperSwiper {
     display: flex;
     align-items: center;
-    margin: 0px 35px 0px 0px;
+    margin: 0px;
   }
 
   .brand {
