--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,7 +11,7 @@
 
 @media only screen and (min-width: 1024px) {
   .wrapper {
-    max-width: 1040px;
-    padding: 40px 0px 0px;
+    max-width: 1120px;
+    padding: 40px;
   }
 }
