--- a/styles/Recommendation.module.css
+++ b/styles/Recommendation.module.css
@@ -71,7 +71,7 @@
   }
 
   .recommendationWrapper {
-    margin: 0px 40px 0px 30px;
+    /* margin: 0px 40px 0px 30px; */
   }
   .navigationBackButton {
     position: absolute;
