--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -65,7 +65,7 @@
 .selectorActive {
   background-color: #a8d3ed;
   width: 100%;
-  height: 40px;
+  height: 42px;
   font-size: 12px;
   color: #404040;
   padding: 0px 16px !important;
@@ -76,7 +76,7 @@
 .selectorInActive {
   background-color: #ffffff;
   width: 100%;
-  height: 40px;
+  height: 42px;
   font-size: 12px;
   color: #404040;
   border: 0.5px solid #a8d3ed;
@@ -137,6 +137,7 @@
 
 .slide {
   width: auto !important;
+  height: auto !important;
 }
 
 @media only screen and (min-width: 1024px) {
