--- a/styles/Widget.module.css
+++ b/styles/Widget.module.css
@@ -1,14 +1,3 @@
-.container {
-  position: relative;
-  height: 500px;
-}
-
-.banner {
-  width: 100%;
-  height: 360px;
-  cursor: pointer;
-}
-
 .form {
   background-color: #ffffff;
   border-radius: 5px;
@@ -166,6 +155,7 @@
   border: 0.3px solid #52627a;
   height: 40px;
   width: 100%;
+
   border-radius: 5px;
   position: relative;
   outline: none;
@@ -182,7 +172,6 @@
 
 .placeholderText {
   font-size: 12px;
-  color: grey;
   width: 90%;
   height: 100%;
   padding: 5px;
@@ -247,6 +236,7 @@
 .buttonListText {
   font-size: 12px;
   font-weight: 400;
+  color: #404040;
   text-align: center;
 }
 
@@ -278,6 +268,7 @@
   .wrapperMobile {
     display: none;
   }
+
   .wrapperForm {
     top: 2%;
   }
