--- a/styles/atoms/Brand.module.css
+++ b/styles/atoms/Brand.module.css
@@ -23,7 +23,6 @@
   padding: 2px 10px;
   height: 40px;
   object-fit: contain;
-  margin: auto;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -38,8 +37,8 @@
   }
 
   .brandImage {
+    width: 90px;
     height: 44px;
     padding: 2px 10px;
-    margin: auto;
   }
 }
