--- a/styles/CarList.module.css
+++ b/styles/CarList.module.css
@@ -74,6 +74,7 @@
 .carListWrapper {
   position: relative;
   height: auto;
+  margin-top: 5px;
   width: 100%;
 }
 
@@ -101,6 +102,39 @@
 
 .wrapperDesktop {
   display: none;
+}
+
+.shimmer {
+  display: flex;
+  overflow: hidden;
+  gap: 15px;
+  margin-top: 5px;
+  padding: 10px;
+}
+
+.undefined {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 240px;
+}
+
+.undefinedTitleText {
+  color: #252525;
+  font-size: 14px;
+  font-family: var(--kanyon-bold);
+  text-align: center;
+}
+
+.undefinedDescText {
+  color: #252525;
+  font-size: 14px;
+  font-family: var(--kanyon);
+  font-weight: 500;
+  text-align: center;
+  padding-top: 20px;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -190,5 +224,21 @@
   .shadowSlider {
     width: 265px;
     height: 350px;
+  }
+
+  .shimmer {
+    gap: 40px;
+  }
+
+  .undefined {
+    height: 100%;
+  }
+
+  .undefinedTitleText {
+    font-size: 24px;
+  }
+
+  .undefinedDescText {
+    font-size: 16px;
   }
 }
