--- a/styles/AnnouncementBox.module.css
+++ b/styles/AnnouncementBox.module.css
@@ -5,7 +5,7 @@
   height: 64px;
   justify-content: space-between;
   padding: 0px 15px;
-  position: relative;
+  position: sticky;
 }
 
 .content {
