--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -92,16 +92,13 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
+  height: 300px;
   margin-top: 15px;
 }
 
 .itemArticleMobile {
   display: flex;
   margin-bottom: 20px;
-}
-
-.itemArticleDekstop {
-  display: none;
 }
 
 .subMainImage {
@@ -138,6 +135,12 @@
 .slide {
   width: auto !important;
   height: auto !important;
+}
+
+.shimmerWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0px 40px;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -226,12 +229,7 @@
     font-size: 14px;
   }
 
-  .itemArticleMobile {
-    display: none;
-  }
-
   .itemArticleDekstop {
-    display: block;
     width: 240px;
     margin-top: 20px;
   }
@@ -255,5 +253,9 @@
     z-index: 3;
     right: -35px;
     margin-top: -20px;
+  }
+
+  .collectionArticle {
+    height: auto;
   }
 }
