--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -6,13 +6,13 @@
 
 .containerActive {
   position: relative;
-  height: 580px;
+  height: 610px;
   transition: height 0.2s;
 }
 
 .banner {
   width: 100%;
-  height: 360px;
+  height: auto;
   cursor: pointer;
 }
 
@@ -159,10 +159,6 @@
   padding: 10px 0px;
 }
 
-.iconDropdown {
-  fill: red;
-}
-
 .selector {
   display: flex;
   flex-direction: row;
@@ -267,6 +263,26 @@
 
 .paginationBullet {
   margin-bottom: 140px !important;
+}
+
+@media only screen and (max-width: 390px) {
+  .paginationBullet {
+    margin-bottom: 80px !important;
+  }
+
+  .banner {
+    height: auto;
+    max-height: 360px;
+    cursor: pointer;
+    object-fit: fill;
+  }
+
+  .wrapperForm {
+    top: 170px;
+  }
+  .wrapperFormActive {
+    top: 170px;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
