--- a/styles/Widget.module.css
+++ b/styles/Widget.module.css
@@ -127,6 +127,7 @@
 
 .iconDropDown {
   padding-left: 5px;
+  padding-top: 3px;
 }
 
 .button {
@@ -211,6 +212,9 @@
   border-style: solid;
   border-width: 0.5px;
   border-radius: 5px;
+  height: min-content;
+  max-height: 175px;
+  overflow-y: scroll;
 }
 
 .placeholderText {
@@ -259,16 +263,15 @@
   margin-top: 5px;
   z-index: 3;
   border: 0.3px solid #52627a;
+  margin-right: 10px;
 }
 
 .buttonIncome {
   outline: none;
   border: none;
   text-align: start;
-  height: 30px;
   background-color: #ffffff;
-  padding: 5px 8px;
-  font-weight: '200';
+  padding: 8px;
 }
 
 .buttonIncome:hover {
@@ -314,5 +317,20 @@
 
   .wrapperForm {
     top: 2%;
+  }
+
+  .list::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  /* Track */
+  .list::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* Handle */
+  .list::-webkit-scrollbar-thumb {
+    background: #e4e9f1;
+    border-radius: 20px;
   }
 }
