--- a/styles/atoms/Brand.module.css
+++ b/styles/atoms/Brand.module.css
@@ -5,7 +5,7 @@
   height: 64px;
   border-radius: 5px;
   margin-right: 10px;
-  border: 0.5px solid;
+  border: 0.5px solid #404040;
   background-color: #ffffff;
   cursor: pointer;
 }
