--- a/styles/AnnouncementBox.module.css
+++ b/styles/AnnouncementBox.module.css
@@ -79,6 +79,8 @@
   position: absolute;
   right: 0;
   z-index: 1;
+  width: auto;
+  height: 64px;
 }
 
 @media only screen and (min-width: 1024px) {
