--- a/styles/Refinancing.module.css
+++ b/styles/Refinancing.module.css
@@ -43,7 +43,6 @@
 
 .wrapperBgImage {
   position: absolute;
-  right: 25%;
   width: auto;
   height: 165px;
   z-index: 1;
@@ -52,6 +51,7 @@
 .circleImage {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .wrapperImage {
