--- a/styles/Recommendation.module.css
+++ b/styles/Recommendation.module.css
@@ -90,6 +90,10 @@
   text-align: center;
   padding-top: 20px;
 }
+
+.navigationWrapper {
+  display: none;
+}
 @media only screen and (min-width: 1024px) {
   .container {
     margin: 40px 0px 15px 0px;
@@ -103,8 +107,10 @@
     font-size: 14px;
   }
 
-  .recommendationWrapper {
+  .navigationWrapper {
+    display: block;
   }
+
   .navigationBackButton {
     position: absolute;
     align-items: center;
