--- a/styles/Refinancing.module.css
+++ b/styles/Refinancing.module.css
@@ -57,7 +57,7 @@
 .wrapperImage {
   position: absolute;
   right: 0;
-  width: 189px;
+  width: auto;
   height: 165px;
   z-index: 1;
 }
@@ -65,6 +65,7 @@
 .modelImage {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 @media only screen and (min-width: 1024px) {
