--- a/styles/Refinancing.module.css
+++ b/styles/Refinancing.module.css
@@ -60,12 +60,12 @@
   width: auto;
   height: 165px;
   z-index: 1;
+  background-color: red;
 }
 
 .modelImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 @media only screen and (min-width: 1024px) {
