--- a/styles/Refinancing.module.css
+++ b/styles/Refinancing.module.css
@@ -54,19 +54,13 @@
   object-fit: cover;
 }
 
-.wrapperImage {
+.modelImage {
+  width: 189px;
+  height: 100%;
   position: absolute;
   right: 0;
-  width: auto;
-  height: 165px;
   z-index: 1;
   background-color: red;
-}
-
-.modelImage {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
 
 @media only screen and (min-width: 1024px) {
