--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -92,7 +92,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  height: 300px;
+  height: auto;
   margin-top: 15px;
 }
 
