--- a/styles/saas/pages/index.module.scss
+++ b/styles/saas/pages/index.module.scss
@@ -1,5 +1,5 @@
-@import '../../abstract/colors';
-@import '../../abstract/mixins';
+@import '../abstract/colors';
+@import '../abstract/mixins';
 
 .main {
   width: 100%;
